Corrected typos and bolded some words

--- a/LinAlgNotes.tex
+++ b/LinAlgNotes.tex
@@ -927,12 +927,14 @@ For $z = x+yi$, the set of point is $(x,y)$\\
 \end{figure}
 
 \subsection{Polar Form}
-Using xy coordinate system is only one method of representing a position in space. Another method of representing a position in space is to represent it as magnitude of the vector and the amount of angle that it is displaced from a reference point (usually positive x axis). So instead of having $(x,y)$, it would be $(r,\theta)$.\\
+Using $xy$ coordinate system is only one method of representing a position in space. Another method of representing a position in space is to represent it as magnitude of the vector and the amount of angle that it is displaced from a reference point (usually positive x axis). So instead of having $(x,y)$, it would be $(r,\theta)$.\\
 The magnitude of the vector is determined by finding the length of the vector. Pythagorean Theorem can be used.\\
 \begin{equation}
 r = |z| = \sqrt{x^2+y^2}
 \end{equation}
+\begin{centering}
 and 
+\end{centering}
 \begin{equation}
 \begin{split}
 x &= rcos\theta\\
@@ -1040,18 +1042,18 @@ $n^{th}$ root questions are very straight forward, as you just need to use the f
 
 \section{Vector Spaces}
 Vector space is any space that satisfies the 10 axioms that are found in your textbook (you know which one I am talking about). Luckily, as for final exam in Fall 2017, you do not need to memorize nor need to prove whether a space is a vector space or not. 
-Until now, we were only dealing with \textbf{vectors}, but \textbf{polynomials}, and \textbf{matrices} are other types of vectorspaces that satisfies the 10 axioms. Some notations are following: \\
+Until now, we were only dealing with \textbf{vectors}, but \textbf{polynomials}, and \textbf{matrices} are other types of vectorspaces that satisfies the 10 axioms. Some notations are following: \\\\
 \begin{centering}
-$P_n$: Set of all polynomials of degree \textbf{AT MOST} $n$\\
-$R^n$: Set of all vectors in $n^{th}$ dimension\\
-$M(m,n)$: Set of all $m$x$n$ matrices \\
+$\mathbf{P_n}$: Set of all polynomials of degree \textbf{AT MOST} $n$\\
+$\mathbf{R^n}$: Set of all vectors in $n^{th}$ dimension\\
+$\mathbf{M(m,n)}$: Set of all $m$x$n$ matrices \\
 \end{centering}
 
 \subsection{Subspaces}
 Define subspace generally, suppose $V$ is a vector space, a non-empty subset  $U$ or $V$ is a subspace of $V$ if it follows the two properties:\\
 \begin{centering}
-S1: $x + y \in U, \; x,y \in U$\\
-S2: $tx \in U, \;, x\in U, t\in\R$\\ 
+\textbf{S1}: $x + y \in U, \; x,y \in U$\\
+\textbf{S2}: $tx \in U, \;, x\in U, t\in\R$\\ 
 \end{centering}
 (Zero vector existing is technically proven if the other two are proven, but you should still prove that the zero vector exists initially.
 
@@ -1141,7 +1143,7 @@ Must \colon
 x_2 + x_4 = 0
 \end{cases}
 \end{equation}\\
-These two hoomogenous equations define the set.
+These two homogenous equations define the set.
 
  
  
