Page26 fixed differnce of square property

--- a/LinAlgNotes.tex
+++ b/LinAlgNotes.tex
@@ -891,7 +891,7 @@ As observed, the complex conjugate simply takes the negative of the imaginary po
 \begin{equation}
 \overline{z}z = x^2 + y^2
 \end{equation}
-This is same as the difference of square property $(x+y)(x-y) = x^2 + y^2$. Notice that multiplying complex number with itself results in purely real number. This is used to perform division of complex numbers in rectangular form with this formula.\\
+This is same as the difference of square property $(x+y)(x-y) = x^2 - y^2$. Notice that multiplying complex number with itself results in purely real number. This is used to perform division of complex numbers in rectangular form with this formula.\\
 
 \begin{equation}
 \frac{z_1}{z_2} = \frac{z_1\overline{z_2}}{z_2\overline{z_2}}
